<?xml version="1.0"?>
<package format="3">
  <name>config_utilities_msgs</name>
  <version>2.0.0</version>
  <description>Tools for working with C++ config structs.</description>

  <author email="lschmid@mit.edu">Lukas Schmid</author>
  <author email="na26933@mit.edu">Nathan Hughes</author>

  <maintainer email="lschmid@mit.edu">Lukas Schmid</maintainer>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>