<?xml version="1.0"?>
<package format="3">
  <name>config_utilities_ros</name>
  <version>2.0.0</version>
  <description>Tools for working with C++ config structs.</description>

  <author email="lschmid@mit.edu">Lukas Schmid</author>
  <author email="na26933@mit.edu">Nathan Hughes</author>

  <maintainer email="lschmid@mit.edu">Lukas Schmid</maintainer>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>config_utilities</depend>
  <depend>config_utilities_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-flask</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
